Refactor API and delivery handling to use Gin framework
- Replaced chi router with Gin for improved routing and middleware support.
- Updated delivery and subscription handlers to utilize Gin context for request handling.
- Introduced support for script execution in delivery processing, allowing for payload transformation.
- Added new fields for source and delivery models to accommodate script functionality.
- Removed relay command and worker as separate binaries, integrating functionality into the API.
- Enhanced .gitignore to exclude new API and worker directories.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # Binaries
 /bin/
+/api
+/worker
+/relay
 /kubectl
 /minikube-*
 *.exe
@@ -27,6 +30,9 @@ go.work.sum
 *.swp
 *.swo
 *~
+
+# Air
+/tmp/
 
 # OS
 .DS_Store
